Support for Joomla integration

--- a/themes/default/css/reportico.css
+++ b/themes/default/css/reportico.css
@@ -14,6 +14,14 @@
     position: relative;
 }
 
+#reportico-container * {
+-webkit-box-sizing: border-box;
+-moz-box-sizing: border-box;
+box-sizing: border-box; 
+}
+
+
+
 .reportico-prepare-toolbar-pane input
 {
     float: right;
@@ -346,9 +354,6 @@ input.reportico-admin-button2
 /* ------------------ Main Screen Form Box --------------*/
 .reportico-prepare-form 
 { 
-    /*width: 90% !important;
-    margin-left: 5% !important;
-    margin-right: 5% !important;*/
     text-align: left;
     margin-left: 0%;
     width: 100%;
